[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.3"
bevy_polyline = "0.7.0"
rand = "0.8.5"


[target.x86_64-pc-windows-msvc]
linker = "lld"
rustflags = [
  "-Lnative=/home/me/.xwin/crt/lib/x86_64",
  "-Lnative=/home/me/.xwin/sdk/lib/um/x86_64",
  "-Lnative=/home/me/.xwin/sdk/lib/ucrt/x86_64",
]
